--- a/DonorSystemUI/Views/Login/Index.cshtml
+++ b/DonorSystemUI/Views/Login/Index.cshtml
@@ -1,3 +1,56 @@
-﻿@*
-    Login Index
-*@
+﻿@model LoginDto
+@{
+    Layout = null;
+}
+
+<!DOCTYPE html>
+
+<html>
+<head>
+    <meta name="viewport" content="width=device-width" />
+    <title>Login</title>
+    <link rel="stylesheet" href="~/css/site.css" />
+</head>
+<body>
+    
+
+    <div class="login-form-bg h-100">
+        <div class="container h-100">
+            <div class="row justify-content-center h-100">
+                <div class="col-xl-6">
+                    <div class="form-input-content">
+                        <div class="card login-form mb-0">
+                            <div class="card-body pt-5">
+                                <a class="text-center" href="index.html"> <h4>Donor System</h4></a>
+
+                                <form class="mt-5 mb-5 login-input" method="post">
+                                    <div class="form-group">
+                                        <input type="text" class="form-control" placeholder="Kullanıcı Adınız" asp-for="Username">
+                                        <span asp-validation-for="Username" class="text-danger"></span>
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="password" class="form-control" placeholder="Şifreniz" asp-for="Password">
+                                        <span asp-validation-for="Password" class="text-danger"></span>
+                                    </div>
+                                    <button class="btn login-form__btn submit w-100">Giriş Yap</button>
+                                </form>
+                                <p class="mt-5 login-form__footer">Bir Hesabın Yok mu? <a href="/Register/Index/" class="text-primary">Kayıt Ol</a></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!--**********************************
+        Scripts
+    ***********************************-->
+    <script src="~/js/common.min.js"></script>
+    <script src="~/js/custom.min.js"></script>
+    <script src="~/js/settings.js"></script>
+    <script src="~/js/gleek.js"></script>
+    <script src="~/js/styleSwitcher.js"></script>
+
+</body>
+</html>
