--- a/DonorSystemUI/Views/Staff/CreateDonor.cshtml
+++ b/DonorSystemUI/Views/Staff/CreateDonor.cshtml
@@ -1,8 +1,40 @@
-﻿
+﻿@using DonorSystemUI.Dtos.DonorDto;
+@model CreateDonorDto;
 @{
     ViewData["Title"] = "CreateDonor";
-    Layout = "~/Views/Shared/_AdminLayout.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>CreateDonor</h1>
+<form method="post">
+    <input type="hidden" asp-for="Id" />
+    <label>Full Name</label>
+    <input type="text" asp-for="Fullname" class="form-control" />
+    <span asp-validation-for="Fullname" class="text-info"></span>
+    <br />
+    <label>Blood Type</label>
+    <input type="text" asp-for="BloodType" class="form-control" />
+    <span asp-validation-for="BloodType" class="text-info"></span>
+    <br />
+    <label>Town</label>
+    <input type="text" asp-for="Town" class="form-control" />
+    <span asp-validation-for="Town" class="text-info"></span>
+    <br />
+    <label>City</label>
+    <input type="text" asp-for="City" class="form-control" />
+    <span asp-validation-for="City" class="text-info"></span>
+    <br />
+    <label>Phone</label>
+    <input type="text" asp-for="PhoneNo" class="form-control" />
+    <span asp-validation-for="PhoneNo" class="text-info"></span>
+    <br />
+    <label>Photo</label>
+    <input type="text" asp-for="PhotoUrl" class="form-control" />
+    <span asp-validation-for="PhotoUrl" class="text-info"></span>
+    <br />
+    <label>Unit</label>
+    <input type="text" asp-for="Unit" class="form-control" />
+    <span asp-validation-for="Unit" class="text-info"></span>
+    <br />
+    <button class="btn btn-primary">Create</button>
+</form>
 
