--- a/DonorSystemUI/Views/_ViewImports.cshtml
+++ b/DonorSystemUI/Views/_ViewImports.cshtml
@@ -1,3 +1,6 @@
 ﻿@using DonorSystemUI
 @using DonorSystemUI.Models
+@using DonorSystemUI.Dtos.LoginDto
+@using DonorSystemUI.Dtos.DonorDto
+@using DonorSystemUI.Dtos.BloodDto
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
