--- a/DonorSystemUI/Views/Login/SignUp.cshtml
+++ b/DonorSystemUI/Views/Login/SignUp.cshtml
@@ -26,8 +26,8 @@
 
                                 <form class="mt-5 mb-5 login-input" method="post">
                                     <div class="form-group">
-                                        <input type="text" class="form-control" placeholder="Username" asp-for="Username">
-                                        <span asp-validation-for="Username" class="text-warning"></span>
+                                        <input type="text" class="form-control" placeholder="Username" asp-for="UserName">
+                                        <span asp-validation-for="UserName" class="text-warning"></span>
                                     </div>
                                     <div class="form-group">
                                         <input type="password" class="form-control" placeholder="Password" asp-for="Password">
@@ -37,7 +37,15 @@
                                         <input type="password" class="form-control" placeholder="Write the Password Again" asp-for="ConfirmPassword">
                                         <span asp-validation-for="ConfirmPassword" class="text-warning"></span>
                                     </div>
-                                    <button class="btn login-form__btn submit w-100">Sign Up</button>
+                                    <div class="form-group">
+                                        <input type="email" class="form-control" placeholder="E-Mail" asp-for="Mail">
+                                        <span asp-validation-for="Mail" class="text-warning"></span>
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="checkbox" class="form-control" placeholder="Write the Password Again" asp-for="StaffOrClient">
+                                        <span asp-validation-for="StaffOrClient" class="text-warning"></span>
+                                    </div>
+                                    <button type="submit" class="btn login-form__btn submit w-100">Sign Up</button>
                                 </form>
                                 <p class="mt-5 login-form__footer">Have Account ? <a href="/Login/Index/" class="text-primary">Sign In </a></p>
                             </div>
