--- a/DonorSystemUI/Views/Client/AddBloodRequest.cshtml
+++ b/DonorSystemUI/Views/Client/AddBloodRequest.cshtml
@@ -5,10 +5,9 @@
 }
 
 <form method="post">
-    <input type="hidden" asp-for="Id" />
-    <label>Full Name</label>
-    <input type="text" asp-for="Requester" class="form-control" />
-    <span asp-validation-for="Requester" class="text-info"></span>
+
+    <label>@User.Identity.Name</label>
+
     <br />
     <label>Blood Type</label>
     <input type="text" asp-for="BloodType" class="form-control" />
@@ -26,7 +25,7 @@
     <input type="text" asp-for="Unit" class="form-control" />
     <span asp-validation-for="Unit" class="text-info"></span>
     <br />
-    <button class="btn btn-primary">Create</button>
+    <button type="submit" class="btn btn-primary">Create</button>
 </form>
 
 
