--- a/DonorSystemUI/Views/Login/Login.cshtml
+++ b/DonorSystemUI/Views/Login/Login.cshtml
@@ -34,7 +34,7 @@
                                     </div>
                                     <button class="btn login-form__btn submit w-100">Giriş Yap</button>
                                 </form>
-                                <p class="mt-5 login-form__footer">Bir Hesabın Yok mu? <a href="/Register/Index/" class="text-primary">Kayıt Ol</a></p>
+                                <p class="mt-5 login-form__footer">Bir Hesabın Yok mu? <a href="/Login/SignUp/" class="text-primary">Kayıt Ol</a></p>
                             </div>
                         </div>
                     </div>
