--- a/DonorSystemUI/Views/Login/SignUp.cshtml
+++ b/DonorSystemUI/Views/Login/SignUp.cshtml
@@ -42,8 +42,9 @@
                                         <span asp-validation-for="Mail" class="text-warning"></span>
                                     </div>
                                     <div class="form-group">
-                                        <input type="checkbox" class="form-control" placeholder="Write the Password Again" asp-for="StaffOrClient">
-                                        <span asp-validation-for="StaffOrClient" class="text-warning"></span>
+                                        <label>If you are SignUp as a Client do not check</label>
+                                        <input type="checkbox" class="form-control" placeholder="" asp-for="StaffOrClient">
+                                       @* <span asp-validation-for="StaffOrClient" class="text-warning"></span>*@
                                     </div>
                                     <button type="submit" class="btn login-form__btn submit w-100">Sign Up</button>
                                 </form>
